apps/base/nextcloud/nextcloud-exapps-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud-exapps
  labels:
    app.kubernetes.io/part-of: nextcloud
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
