apps/base/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/app: nextcloud
    gethomepage.dev/description: File sharing
    gethomepage.dev/group: Office
    gethomepage.dev/icon: nextcloud.png
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
    nginx.org/proxy-body-size: "0"
    nginx.org/hsts: "true"
    nginx.org/hsts-max-age: "15552000"
    nginx.org/hsts-include-subdomains: "true"
    nginx.org/hsts-behind-proxy: "true"
    nginx.org/server-snippets: |
      add_header Strict-Transport-Security "max-age=15552000; includeSubDomains" always;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nc.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: nc.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
